# quantification

./: .gitignore  cabal.project  quantification.cabal  stack.yaml
quantification/: quantification.cabal
quantification-aeson/src/Data/Exists/: Aeson.hs
quantification/src/Data/: Exists.hs
quantification/src/Data/Binary/: Lifted.hs
quantification/src/Data/Monoid/: Lifted.hs
src/: Topaz.hs
src/Data/: Exists.hs
src/Data/Binary/: Lifted.hs
src/Data/Monoid/: Lifted.hs
src/Topaz/: Rec.hs  Types.hs
topaz/: build  topaz.cabal
topaz/src/Topaz/: Rec.hs  Types.hs
