name:                quantification
version:             0.1
synopsis:            Data types and typeclasses to deal with universally and existentially quantified types
description:         Please see README.md
homepage:            https://github.com/andrewthad/quantification#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Data.Exists
  build-depends: 
      base >= 4.7 && < 5
    , hashable
    , aeson
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/quantification
