cabal-version: 2.0
name: topaz
version: 0.6
synopsis: Extensible records library
description: Provides extensible records types built on top of the quantification library
homepage: https://github.com/andrewthad/quantification#readme
license: BSD3
license-file: LICENSE
author: Andrew Martin
maintainer: andrew.thaddeus@gmail.com
copyright: 2018 Andrew Martin
category: Web
build-type: Simple

library
  hs-source-dirs: src
  exposed-modules:
    Topaz.Rec
    Topaz.Types
  build-depends:
      base >= 4.11.1 && < 5
    , binary >= 0.8 && < 0.10
    , ghc-prim >= 0.5 && < 0.7
    , hashable >= 1.2 && < 1.4
    , aeson >= 1.0 && < 1.5
    , vector >= 0.11 && < 0.13
    , quantification >= 0.6.0
  default-language: Haskell2010
  ghc-options: -O2 -Wall

source-repository head
  type:     git
  location: https://github.com/andrewthad/quantification
